Complete main page.

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,31 +1,33 @@
-h1{
-    text-align:center;
-}
-h4{
-    text-align: right;
-}
-h3{
-    margin-top:40px;
-    text-align: center;
-}
-.pre-scrollable{
-    margin-top:50px;
-    max-height:400px;
-    height:400px;
-}
-
 .left{
-    margin-top:32px;
-    margin-left:-50px;
+    text-align:left;
 }
 .right{
-    margin-top:32px;
-    margin-right:-50px;
+    text-align:right;
 }
-.col-md-4{
-    height:400px;
-    background-image: url('../img/animal.jpg');
-    background-repeat: no-repeat;
-    background-attachment:fixed;
-    background-position: 20% 20%;
+.center{
+    text-align:center;
 }
+h3 {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.col-md-2{
+    margin-top:40px;
+}
+.col-md-2 span {
+    color: #843534;
+    font-weight: 800;
+    font-size: 40px;
+}
+
+.row h4{
+    margin-top:30px;
+}
+
+.list{
+    max-width:400px;
+    margin-left:auto;
+    margin-right:auto;
+}
+
