--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,21 +14,13 @@
 </head>
 <body>
 <div class="page-header">
-    <h1>幸运生肖</h1>
+    <h1 class="center">幸运生肖</h1>
 
 </div>
 <div class="container">
 
-    <div class="col-md-2">
-        <div class="panel panel-default left">
-            <div class="panel-body">
-                <h3>昨日开奖</h3>
-                <p class="pre-scrollable">20170509001期:<br/>鼠牛虎兔龙<br/>20170509001期:<br/>鼠牛虎兔龙<br/>20170509001期:<br/>鼠牛虎兔龙<br/>20170509001期:<br/>鼠牛虎兔龙<br/></p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-8">
-        <h4>
+    <div class="row">
+        <h4 class="center">
             <small id="current-time">时间</small>
         </h4>
         <div class="panel panel-default">
@@ -36,7 +28,7 @@
                 <div>
                     <!-- Nav tabs -->
                     <ul class="nav nav-tabs" role="tablist">
-                        <li role="presentation" >
+                        <li role="presentation">
                             <a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">帮助说明</a>
                         </li>
                         <li role="presentation" class="active">
@@ -50,38 +42,50 @@
                     <!-- Tab panes -->
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane fade " id="tab1">
-                            
-                            
+
                         </div>
                         <div role="tabpanel" class="tab-pane fade in active" id="tab2">
                             <div class="row">
-                                <div class="col-md-1">
-
-                                </div>
-                                <div class="col-md-2">
-                                    <img class="img-responsive " src="img/150x150_pig.png"/>
-                                </div>
-                                <div class="col-md-2">
-                                    <img class="img-responsive " src="img/150x150_mouse.png"/>
-                                </div>
-                                <div class="col-md-2">
-                                    <img class="img-responsive " src="img/150x150_horse.png"/>
-                                </div>
-                                <div class="col-md-2">
-                                    <img class="img-responsive " src="img/150x150_monkey.png"/>
-                                </div>
-                                <div class="col-md-2">
-                                    <img class="img-responsive " src="img/150x150_sheep.png"/>
-                                </div>
-                                <div class="col-md-1">
-
-                                </div>
-
+                               <h3>第<span th:text="${period}"></span>期结果：</h3>
                             </div>
-                            
+                            <div class="row">
+                                <div th:each="result:${results}" class="col-md-2 col-xs-2 center">
+                                    <span th:text="${result}">猪</span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <h4 class="center">距下次开奖还剩:<span id="next-time"></span></h4>
+                            </div>
+                            <div class="row list">
+                                <div class="panel panel-default list">
+                                    <div class="panel-heading">
+                                        <h3 class="panel-title">今日开奖</h3>
+                                    </div>
+                                    <div class="panel-body">
+                                        <ul class="list-group">
+
+                                            <li class="list-group-item">
+                                                <div class="row">
+                                                    <div class="left col-md-6 col-xs-6">第３第三方期</div>
+                                                    <div class="right col-md-6 col-xs-6">鼠牛虎兔龙射</div>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <div class="panel panel-default list">
+                                    <div class="panel-heading">
+                                        <h3 class="panel-title">昨日开奖</h3>
+                                    </div>
+                                    <div class="panel-body">
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="tab3">
-                            
+
                         </div>
                     </div>
 
@@ -89,28 +93,31 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2">
-        <div class="panel panel-default right">
-            <div class="panel-body">
-                <h3>今日开奖</h3>
-                <p class="pre-scrollable">20170509001期:<br/>鼠牛虎兔龙<br/>20170509001期:<br/>鼠牛虎兔龙<br/>20170509001期:<br/>鼠牛虎兔龙<br/>20170509001期:<br/>鼠牛虎兔龙</p>
-            </div>
-        </div>
-    </div>
-
 </div>
 
-
 </body>
-<script>
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var time=new Date(parseInt([[${time}]]));
+    var nextTime=new Date(parseInt([[${nextTime}]]));
     $(document).ready(function () {
-        function updateTime() {
-            var date = (new Date());
-            var time = "当前时间：" + date.getFullYear() + "年" + (date.getMonth()+1) + "月" + date.getDate() + "日  " + date.getHours() + "时" + date.getMinutes() + "分" + date.getSeconds() + "秒";
-            $('#current-time').text(time);
-        }
         updateTime();
         setInterval(updateTime, 1000);
     });
+    function getTime(){
+        return time.getFullYear() + "年" + (time.getMonth() + 1) + "月" + time.getDate() + "日  " + time.getHours() + "时" + time.getMinutes() + "分" + time.getSeconds() + "秒";
+    }
+
+    function updateTime() {
+        time.setTime(parseInt(time.getTime())+1000);
+        $('#current-time').text("当前时间："+getTime());
+        if(nextTime.getTime()<=time.getTime()){
+            location.reload();
+        }
+        var diff=new Date(nextTime.getTime()-time.getTime()+nextTime.getTimezoneOffset()*60000);
+
+        $('#next-time').html((diff.getHours()) + "时"+diff.getMinutes() + "分" + diff.getSeconds() + "秒");
+    }
+    /*]]>*/
 </script>
 </html>
