--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
 <div class="page-header">
-    <h1 class="center">幸运生肖</h1>
+    <div class="center  ">
+    <img src="img/标题.png" class="img-responsive title"/>
+    </div>
 
 </div>
 <div class="container">
