--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -14,9 +14,7 @@ h3 {
     text-align: center;
 }
 
-.col-md-2{
-    margin-top:40px;
-}
+
 .col-md-2 span {
     color: #843534;
     font-weight: 800;
@@ -37,3 +35,27 @@ h3 {
     margin-left:auto;
     margin-right:auto;
 }
+.border {
+    border: 5px solid red;
+}
+small{
+    color:black;
+}
+a{
+    background: #2e6da4;
+    color:white;
+}
+body{
+    background-color:#bc994e;
+    color:black;
+}
+.panel-body{
+    background-color: rgba(223,242,0,0.5);
+}
+.panel .panel-heading{
+    background-color:  rgba(232,5,5,0.5);
+}
+.list-group-item{
+    background-color: rgba(200,220,0,0.5);
+
+ }
