--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="row">
         <h4 class="center">
-            <small id="current-time">时间</small>
+            <h4 class="right" id="current-time">时间</h4>
         </h4>
         <div class="panel panel-default">
             <div class="panel-body">
@@ -50,7 +50,7 @@
                             <div class="row">
                                <h3>第<span th:text="${period}"></span>期结果：</h3>
                             </div>
-                            <div class="row">
+                            <div class="row border">
                                 <div th:each="result:${results}" class="col-md-2 col-xs-2 center">
                                     <img th:src="'img/'+${result}+'.png'" class="img-responsive "/>
                                 </div>
@@ -94,6 +94,7 @@
                             </div>
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="tab3">
+                            <h3 class="center">近五十期统计</h3>
                             <table class="table table-hover table-bordered table-condensed">
                                 <thead>
                                     <tr>
