--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,21 +28,30 @@
                     <!-- Nav tabs -->
                     <ul class="nav nav-tabs" role="tablist">
                         <li role="presentation">
-                            <a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">帮助说明</a>
+                            <a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">游戏说明</a>
                         </li>
                         <li role="presentation" class="active">
                             <a href="#tab2" aria-controls="tab2" role="tab" data-toggle="tab">开奖情况</a>
                         </li>
                         <li role="presentation">
-                            <a href="#tab3" aria-controls="tab3" role="tab" data-toggle="tab">历史情况</a>
+                            <a href="#tab3" aria-controls="tab3" role="tab" data-toggle="tab">近期统计</a>
                         </li>
                     </ul>
 
                     <!-- Tab panes -->
                     <div class="tab-content">
-                        <div role="tabpanel" class="tab-pane fade " id="tab1">
+                        <div role="tabpanel" class="tab-pane fade center" id="tab1">
                             <p>
-                                幸运生肖是一种在线即开型娱乐游戏，有12位生肖组汇而成，属于娱乐范畴，可以当做竞猜娱乐游戏进行，每五分钟系统将自动生成六个球开出，每期最多开出六位生肖，全天从上午十点到晚上十一点共开出156期，特此声明，本游戏仅用于娱乐。
+                                幸运生肖是一种在线即开型娱乐游戏，有12位生肖组汇而成.
+                            </p>
+                            <p>
+                                属于娱乐范畴，可以当做竞猜娱乐游戏进行.
+                            </p>
+                            <p>
+                                每五分钟系统将自动生成六个球开出，每期最多开出六位生肖，全天从上午十点到晚上十一点共开出156期.
+                            </p>
+                            <p>
+                                本游戏仅用于娱乐，特此声明。
 
                             </p>
                         </div>
