Remove chinese path name.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="page-header">
     <div class="center ">
-    <img src="img/标题.png" class="img-responsive title"/>
+    <img src="img/title.png" class="img-responsive title"/>
     </div>
 </div>
 <div class="container">
